[tool.poetry]
name = "imagineui-website"
version = "0.1.0"
description = "Website and documentation for ImagineUI"
authors = ["Nick Volynkin <nick.volynkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Sphinx = "^2.3.1"
sphinx-intl = "^2.0.0"
sphinx-rtd-theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
